--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
 <h1>This quiz will test your knowledge of Harry Potter Trivia</h1>
    
-    <script type="text/javascript" src="assets/javascript/game.js"></script>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 </html>
